deploy/elasticsearch/kubernetes-namespace-elatic.yaml
# Source: eck-operator/templates/operator-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: elastic-system
  labels:
    name: elastic-system
    control-plane: elastic-operator
    app.kubernetes.io/version: "1.0.1"
